--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "partials/reset.scss";
 @import "partials/base";
+@import "partials/startPage";
 @import "partials/header";
 @import "partials/footer";
 @import "partials/content.scss";
