--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -8,4 +8,11 @@ body {
   height: 1000px;
 }
 
-
+.notfound{
+  background: url("../images/NotFound.jpg");
+  background-repeat: no-repeat;
+  background-position: initial;
+  background-size: contain;
+  width: 100%;
+  height: 80vh;
+}
