--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,5 +1,6 @@
 body {
-  background: repeating-linear-gradient(to right, #F5F5F5 , #F5F5F5 2px, #fff 2px, #fff 10px);
+  font-family: 'Comfortaa', sans-serif;
+  background: #e6ce6a;
 }
 .container{
   width: 980px;
