last commit before presentation

--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -138,3 +138,11 @@
   background: linear-gradient(to bottom right, #e6ce6a 0%, #b7892b 100%);
   color: #b7892b;
 }
+.black {
+  background: linear-gradient(to bottom right, #180A0A 0%, #110505 100%);
+  color: #110505;
+}
+.ipa{
+  background: linear-gradient(to bottom right, #daeb3b 0%, #ebc02d 100%);
+  color: #efb300;
+}
